--- a/project.Rmd
+++ b/project.Rmd
@@ -1,5 +1,21 @@
+name: "Yay internet!"
+output_dir: "."
+navbar:
+  title: "Home"
+  right:
+    - text: "About"
+      href: about.html
+    - icon: fa-envelope fa-lg
+      href: mailto:<you@youremail.com>
+    - icon: fa-github fa-lg
+      href: http://github.com/<YOUR_GH_NAME>/
+output:
+  html_document:
+    theme: cerulean
+
+
 ---
-title: "About"
+title: "My awesome website"
 output: 
   html_document:about
     toc: true
@@ -7,7 +23,7 @@ output:
     theme: cerulean
 ---
 
-# About
+# This is Jeff's awesome website
 
 Here's a gif of elmo
 
