--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Dashboard"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
@@ -13,54 +13,77 @@ library(tidyverse)
 library(plotly)
 library(p8105.datasets)
 
-data("nyc_airbnb")
+data("instacart")
 
-nyc_airbnb = 
-  nyc_airbnb |> 
-  mutate(stars = review_scores_location / 2) |> 
-  select(borough = neighbourhood_group, 
-         neighbourhood, stars, price, room_type, lat, long) |> 
-  drop_na(stars) |> 
-  filter(
-    borough == "Manhattan",
-    room_type == "Entire home/apt",
-    price %in% 100:500
-  )
+instacart = instacart |> 
+  janitor::clean_names() |> 
+  mutate(
+    order_dow = 
+      case_match(
+        order_dow, 
+        1 ~ "Mon", 
+        2 ~ "Tues",
+        3 ~ "Wed",
+        4 ~ "Thurs",
+        5 ~ "Fri",
+        6 ~ "Sat",
+        0 ~ "Sun"),
+    order_dow = as.factor(order_dow)) |> 
+  mutate(day_week = forcats::fct_relevel(order_dow, c("Mon", "Tues", "Wed", "Thurs", "Fri", "Sat", "Sun")))
 ```
 
 
 Column {data-width=650}
 -----------------------------------------------------------------------
 
-### Chart A
+### Chart A: Line Plot
 
 ```{r}
-nyc_airbnb |> 
-  mutate(neighbourhood = fct_reorder(neighbourhood, price)) |> 
-  plot_ly(y = ~price, color = ~neighbourhood, type = "box", colors = "viridis")
+#A line plot showing the counts of items in each aisle
+instacart |> 
+  count(aisle) |> 
+  filter(n > 10000) |> 
+  mutate(aisle = fct_reorder(aisle, n)) |> 
+  mutate(rank = min_rank(desc(n))) |> 
+  arrange(desc(n)) |>
+  plot_ly(
+    x = ~aisle, y = ~n, type = "scatter", mode = "markers",
+    alpha = 0.5)
 ```
 
 Column {data-width=350}
 -----------------------------------------------------------------------
 
-### Chart B
+### Chart B: Bar Plot
 
 ```{r}
-nyc_airbnb |> 
-  mutate(text_label = str_c("Price: $", price, "\nRating: ", stars)) |> 
-  plot_ly(
-    x = ~lat, y = ~long, color = ~price, text = ~text_label,
-    type = "scatter", mode = "markers", alpha = 0.5)
+#A bar plot show what aisle had the most sale during a week.
+try_df =
+  instacart |> 
+  count(aisle) |> 
+  filter(n > 10000) 
+  
+bar_plot =  
+  inner_join(try_df, instacart, by = "aisle") |> 
+  mutate(order_dow = fct_reorder(order_dow, n)) |> 
+  plot_ly(x = ~order_dow, y = ~n, color = ~order_dow, type = "bar", colors = "viridis")  
+
+bar_plot
 ```
 
-### Chart C
+### Chart C: Scatter Plot
 
 ```{r}
-nyc_airbnb |> 
-  count(neighbourhood) |> 
-  mutate(neighbourhood = fct_reorder(neighbourhood, n)) |> 
-  plot_ly(
-    x = ~neighbourhood, y = ~n, color = ~neighbourhood,
-    type = "bar", colors = "viridis")
+#A scatter plot showing an average orders that was ordering within the day. 
+instacart |> 
+  group_by(order_dow, order_hour_of_day) |> 
+  summarise(avg_orders = n()) |> 
+  arrange(order_dow,
+  order_hour_of_day) |> 
+  plot_ly(x= ~order_hour_of_day,
+          y= ~avg_orders,
+          color = ~order_dow,
+          type = "scatter", mode = "markers",
+     text = ~order_hour_of_day, alpha = 0.5)
 ```
 
